css/style.css
/* LANDING PAGE */

/* Used for the IZZAT Logo */

@font-face {
  font-family: logo;
  src: url(font/techno_hideo.ttf);
}

.logo {
  font-family: logo;
  font-size: 7vw;
  color: Gold;
}

/* Style the video: 100% width and height to cover the entire window */

#myVideo {
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
}

/* Add some content at the bottom of the video/page */

.content {
  position: fixed;
  left: 0;
  top: 0;
  text-align: center;
  background: rgba(0, 0, 0, 0.5);
  /* background: red; */
  color: #f1f1f1;
  width: 20%;
  padding: 20px;
  height: 100%;
}

/* Editing all of the nav bar directory pages  */

.NavBarLinks ul li a {
  /* background: yellow; */
  font-size: 1.7vw;
  text-align: left;
  font-family: 'Jura', sans-serif;
}

.landingBTN {
  font-size: 1.5em;
  border: none;
  background: transparent;
  color: gold;
  cursor: pointer;
}

.landingBTN:hover {
  background: #ddd;
  color: #337ab7;
}

/* ~~~~~~~~~~~~~~~~~~~~~ ABOUT US PAGE ~~~~~~~~~~~~~~~~~~~~~ */

.sidenav {
  height: 100%;
  /* 100% Full-height */
  width: 0;
  /* 0 width - change this with JavaScript */
  position: fixed;
  /* Stay in place */
  z-index: 1;
  /* Stay on top */
  top: 0;
  /* Stay at the top */
  left: 0;
  background-color: #111;
  /*Black*/
  overflow-x: hidden;
  /* Disable horizontal scroll */
  padding-top: 20px;
  /* Place content 60px from the top */
  transition: 0.5s;
  /* 0.5 second transition effect to slide in the sidenav */
}

/* The navigation menu links */

.sidenav a {
  /* padding: 8px 8px 8px 32px; */
  text-decoration: none;
  font-size: 25px;
  /* color: #818181; */
  display: block;
  transition: 0.3s;
}

/* When you mouse over the navigation links, change their color */

.sidenav a:hover {
  color: #337ab7;
}

/* Position and style the close button (top right corner) */

.sidenav .closebtn {
  /* position: absolute; */
  /* top: 0;
  right: 25px; */
  font-size: 4em;
  margin-left: 90%;
  /* position: absolute;
  vertical-align: middle;
  display: flex;
  align-items: center;
  color: gold;
  height: 100%;
  font-size: 3em;
  padding-left: 1%; */
}

/* Style page content - use this if you want to push the page content to the right when you open the side navigation */

#main {
  transition: margin-left .5s;
  padding: 20px;
}

/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */

@media screen and (max-height: 450px) {
  .sidenav {
    padding-top: 15px;
  }
  .sidenav a {
    font-size: 18px;
  }
}

/* Plus Button for the landing portion */

.maxminBTN {
  font-size: 5em;
  border: none;
  background: transparent;
  /* color: gold; */
  cursor: pointer;
  color: gold;
}

/* Aligning the button correctly */

.openNavBTN {
  position: absolute;
  /* vertical-align: middle; */
  display: flex;
  align-items: center;
  height: 100%;
  padding-left: 1%;
}

.pageBackgroundIMG {
  width: 100%;
  display: block;
  margin-left: auto;
  margin-right: auto
}

